SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/Ocean_Redshift_Request__c.object
<CustomObject>
    <fields>
        <fullName>ADO_Notes__c</fullName>
        <label>ADO Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AWS_Account_Name__c</fullName>
        <label>AWS Account Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_Region__c</fullName>
        <label>AWS Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_AWS_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Component__c</fullName>
        <label>Application Component</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Calculated_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Environment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Cost__c</fullName>
        <label>Estimated Monthly Cost</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_RedShift_FundingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Node_Quantity__c</fullName>
        <label>Node Quantity</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Months_Requested__c</fullName>
        <label>Number of Months Requested</label>
        <precision>3</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ocean_Redshift_Request_Id__c</fullName>
        <displayFormat>OCEAN-REDSHFT-{00000}</displayFormat>
        <label>Ocean Redshift Request Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Ocean_Request_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Ocean Request</label>
        <referenceTo>Ocean_Request__c</referenceTo>
        <relationshipLabel>Ocean_Redshift_Requests</relationshipLabel>
        <relationshipName>Ocean_Redshift_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Redshift_Type__c</fullName>
        <label>Redshift Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_RedShift_Node_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource_Status__c</fullName>
        <label>Resource Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Resource_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Estimated_Cost__c</fullName>
        <label>Total Estimated Cost</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Usage_Hours_Per_Day__c</fullName>
        <label>Usage_Hours_Per_Day</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Hours_Per_Month__c</fullName>
        <label>Usage_Hours_Per_Month</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Ocean Redshift Request</label>
    <nameField>
        <label>Ocean Redshift Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ocean_Redshift_Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>